Fix dark mode in Chrome

--- a/src/output.css
+++ b/src/output.css
@@ -254,6 +254,16 @@
       background-color: var(--color-gray-900);
     }
   }
+  .dark\:px-3\.5 {
+    @media (prefers-color-scheme: dark) {
+      padding-inline: calc(var(--spacing) * 3.5);
+    }
+  }
+  .dark\:py-3\.5 {
+    @media (prefers-color-scheme: dark) {
+      padding-block: calc(var(--spacing) * 3.5);
+    }
+  }
   .dark\:text-gray-100 {
     @media (prefers-color-scheme: dark) {
       color: var(--color-gray-100);
